src_old/objects/ProjectServiceQuestionRule__c.object
<CustomObject>
    <description>Project Service Question Rule</description>
    <fields>
        <fullName>DefinedResponseValueText__c</fullName>
        <formula>DefinedResponseValue__r.DefinedResponseText__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Defined Response Value Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefinedResponseValue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Defined Response Value</label>
        <referenceTo>ProjectServiceQuestionDefinedResponse__c</referenceTo>
        <relationshipLabel>Service Question Rules</relationshipLabel>
        <relationshipName>Service_Question_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentProjectServiceQuestionText__c</fullName>
        <formula>ParentProjectServiceQuestion__r.QuestionText__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Project Service Question Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentProjectServiceQuestionType__c</fullName>
        <formula>ParentProjectServiceQuestion__r.QuestionType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Project Service Question Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentProjectServiceQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Project Service Question</label>
        <referenceTo>ProjectServiceQuestion__c</referenceTo>
        <relationshipLabel>Service Question Rules</relationshipLabel>
        <relationshipName>Service_Question_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectServiceQuestionText__c</fullName>
        <formula>ProjectServiceQuestion__r.QuestionText__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Service Question Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectServiceQuestion__c</fullName>
        <label>Project Service Question</label>
        <referenceTo>ProjectServiceQuestion__c</referenceTo>
        <relationshipLabel>Service Question Rules (Project Service Question)</relationshipLabel>
        <relationshipName>Service_Question_Rules1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Project Service Question Rule</label>
    <nameField>
        <displayFormat>PQR-{00000000}</displayFormat>
        <label>Project Service Question Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Service Question Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>